fix: fix #input text alignment

--- a/packages/dnb-ui-lib/src/components/input/style/_input.scss
+++ b/packages/dnb-ui-lib/src/components/input/style/_input.scss
@@ -29,6 +29,7 @@
 
   font-size: var(--input-font-small);
   line-height: var(--input-height);
+  text-align: left;
 
   &__inner {
     display: inline-flex;
@@ -83,7 +84,7 @@
       --input-padding
     ); // we may expand things because of the ellipsis
 
-    text-align: left;
+    text-align: inherit;
 
     color: inherit;
     background-color: transparent;
